--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Maciejs Utils</title>
     </head>
-    <body class="bg-background-container jkl body">
+    <body class="bg-background-container text-text-default jkl body">
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
