Tving lightmode, rydd opp App.tsx

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Maciejs Utils</title>
     </head>
-    <body class="bg-background-container text-text-default jkl body">
+    <body
+        class="bg-background-container text-text-default jkl body"
+        data-theme="light"
+    >
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
